--- a/style.css
+++ b/style.css
@@ -155,7 +155,13 @@ body {
     font-size: 20px;
     font-weight: 500;
 }
-
+.about-container .about-wrapper .about-tag {
+    color: var(--blue);
+    text-align: center;
+    margin-top: 15px;
+    font-size: 30px;
+    font-style: italic;
+}
 .bottom-container {
     position: relative;
 
@@ -418,6 +424,12 @@ body {
     }
     .about-container .about-wrapper h1{
         text-align: center;
+    }
+    .about-container .about-wrapper h3{
+        text-align: center;
+    }
+    .about-container .about-wrapper .about-tag {
+        font-size: 17px;
     }
     .spacer {
         width: 100%;
